--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "test": "node test/run-tests.js",
     "precoverage": "npm run build",
     "coverage": "nyc node test/run-tests.js",
+    "coverage-report": "nyc report --reporter=lcov",
     "setup": "mkdir -p coverage && cp -n .waiting.html coverage/index.html || true",
     "dev:live": "live-server --port=4103 --ignorePattern='(js|css|png)$' coverage",
     "dev:watch": "watch 'npm run coverage' lib/ test/",
