--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - stable
   # pull request from non-collaborators
   pull_request: {}
   # nightly
