--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "source-map",
+  "name": "@gunsch/source-map",
   "description": "Generates and consumes source maps",
-  "version": "0.8.0-beta.0",
+  "version": "0.7.5",
   "homepage": "https://github.com/mozilla/source-map",
   "author": "Nick Fitzgerald <nfitzgerald@mozilla.com>",
   "contributors": [
@@ -44,7 +44,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/mozilla/source-map.git"
+    "url": "http://github.com/gunsch/source-map.git"
   },
   "main": "./source-map.js",
   "types": "./source-map.d.ts",
